# swig-wallet

./: .actrc  .clippy.toml  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  SWIG.md  code-review.md  diff  expanded_talk_script.md  nextest.toml  original_tests.ts  rust-toolchain.toml  rustfmt.toml  sample_anchor_code.rs  swig-sub-account-prd.md  swig.code-workspace  swig_talk_slides.md  talk.md  validator.sh
assertions/: Cargo.toml
assertions/src/: lib.rs
cli/: Cargo.toml  README.md
cli-x/: Cargo.toml  config-example.json
cli-x/src/: commands.rs  config.rs  interactive.rs  main.rs
cli/dumps/: mapping.json  scope.json
cli/src/: commands.rs  decoder.rs  interactive.rs  main.rs
instructions/: Cargo.toml
instructions/src/: compact_instructions.rs  lib.rs
interface/: Cargo.toml
interface/src/: lib.rs
program/: Cargo.toml  build.rs  idl.json
program/src/: error.rs  instruction.rs  lib.rs  state.rs
program/src/actions/: add_actions_to_role_v1.rs  add_authority_v1.rs  add_authorization_lock_v1.rs  close_swig_v1.rs  close_token_account_v1.rs  create_plugin_bytecode_v1.rs  create_session_v1.rs  create_sub_account_v1.rs  create_v1.rs  execute_plugin_v1.rs  execute_v1.rs  initialize_bytecode_v1.rs  initialize_config_v1.rs  is_valid_signature.rs  is_valid_signature_abnf.rs  manage_auth_lock_v1.rs  manage_sub_account_v1.rs  migrate_to_wallet_address_v1.rs  mod.rs  modify_auth_lock_v1.rs  recover_authority_v1.rs  remove_actions_from_role_v1.rs  remove_authority_v1.rs  remove_authorization_lock_v1.rs  replace_authority_v1.rs  set_rent_claimer_v1.rs  sign_v1.rs  sign_v2.rs  sol_destination_limit_v1.rs  sub_account_sign_v1.rs  sub_account_sign_v2.rs  toggle_sub_account_v1.rs  token_destination_limit_v1.rs  transfer_assets_v1.rs  update_authority_v1.rs  withdraw_from_sub_account_v1.rs
program/src/assertions/: mod.rs
program/src/authority_models/: ed25519.rs  ed25519_session.rs  mod.rs  secp256k1.rs
program/src/instruction/: accounts.rs
program/src/util/: auth_lock.rs  authority_ops.rs  mod.rs  permission_utils.rs
program/src/vm/: mod.rs
program/tests/: action_tests.rs  action_v2_test.rs  add_actions_to_role_test.rs  add_authority_test.rs  add_authority_v2_test.rs  ai_agent_confinement_test.rs  all_but_manage_authority_test.rs  all_but_manage_authority_v2_test.rs  authlock_sign_v2_test.rs  authorization_lock_cleanup_test.rs  authorization_lock_permissions_test.rs  authorization_lock_role_tracking_test.rs  authorization_lock_sign_v2_test.rs  authorization_lock_sol_limits_test.rs  authorization_lock_test.rs  authorization_lock_token_limits_test.rs  blacklist_test.rs  blacklist_v2_test.rs  close_swig_authority_test.rs  close_swig_test.rs  close_token_account_test.rs  cpi_program_permission_test.rs  cpi_program_permission_test.rs.bak  cpi_program_permission_v2_test.rs  create_session_test.rs  create_session_v2_test.rs  create_test.rs  create_v2_test.rs  developer_role_test.rs  enterprise_test.rs  external_kill_switch_test.rs  is_valid_signature_test.rs  manage_auth_lock_test.rs  migrate_to_wallet_address_test.rs  multi_sub_account_test.rs  oracle_limit_tests.rs  oracle_recurring_limit_tests.rs  program_authority_test.rs  program_scope_test.rs  program_scope_test_v2.rs  (+39 more)
program/tests/common/: mod.rs
recovery/: Cargo.toml
recovery/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
rust-sdk/: Cargo.toml
rust-sdk/src/: agent_role.rs  client_role.rs  decoder.rs  error.rs  instruction_builder.rs  interface.rs  lib.rs  multi_wallet_manager.rs  types.rs  utils.rs  wallet.rs
rust-sdk/src/tests/: mod.rs  swig_ix_test.rs  wallet_tests.rs
rust-sdk/src/tests/common/: mod.rs
rust-sdk/src/tests/ix_builder/: authority_tests.rs  destination_tests.rs  mod.rs  program_all_tests.rs  program_exec_tests.rs  program_scope_tests.rs  rent_claimer_tests.rs  secp256r1_tests.rs  session_tests.rs  sign_v1_tests.rs  sign_v2_tests.rs  sub_account.rs  sub_account_test.rs  swig_account_tests.rs  transfer_tests.rs
rust-sdk/src/tests/multi_wallet_manager/: batch_execution.rs  common.rs  helpers.rs  instruction_creation.rs  mod.rs
rust-sdk/src/tests/wallet/: agent_role_test.rs  authority_tests.rs  creation_tests.rs  decoder_tests.rs  destination_tests.rs  helper_tests.rs  mod.rs  oracle_tests.rs  program_all_tests.rs  program_scope_test.rs  rent_claimer_tests.rs  secp256r1_test.rs  (+7 more)
rust-sdk/tests/: authority_test.rs  swig_ix_test.rs  swig_sdk_test.rs
rust-sdk/tests/common/: mod.rs
state/: Cargo.toml
state-x/: Cargo.toml
state-x/src/: constants.rs  lib.rs  role.rs  swig.rs  util.rs
state-x/src/action/: all.rs  authorization_lock.rs  manage_authority.rs  manage_authorization_lock.rs  manage_authorization_locks.rs  mod.rs  oracle_limits.rs  program.rs  program_scope.rs  sol_limit.rs  sol_recurring_limit.rs  stake_all.rs  stake_limit.rs  stake_recurring_limit.rs  sub_account.rs  token_limit.rs  token_recurring_limit.rs
state-x/src/authority/: bloom.rs  ed25519.rs  mod.rs  secp256k1.rs  secp256r1.rs
state/src/: authority.rs  constants.rs  lib.rs  role.rs  swig.rs  transmute.rs  util.rs
state/src/action/: all.rs  all_but_manage_authority.rs  authlock.rs  authorization_lock.rs  blacklist.rs  close_swig_authority.rs  external_kill_switch.rs  manage_auth_lock.rs  manage_authlock.rs  marker.rs  mod.rs  oracle_limits.rs  oracle_recurring_limit.rs  program.rs  program_all.rs  program_curated.rs  program_scope.rs  recovery_authority.rs  rent_destination.rs  sol.rs  sol_destination_limit.rs  sol_limit.rs  sol_recurring_destination_limit.rs  sol_recurring_limit.rs  stake_limit.rs  stake_recurring_limit.rs  sub_account.rs  token_destination_limit.rs  token_limit.rs  token_recurring_destination_limit.rs  token_recurring_limit.rs
state/src/authority/: ed25519.rs  global.rs  groth16.rs  mod.rs  secp256k1.rs  secp256r1.rs  webauthn.rs
state/src/tail/: mod.rs  rent_claimer.rs
state/src/util/: zero_copy.rs
swig-migration-cli/: Cargo.toml
test-program-authority/: Cargo.toml  Xargo.toml
test-program-authority/src/: lib.rs  processor.rs
(+36 files in other folders)
