[workspace]
resolver = "2"
members = [
  "program",
  "interface",
  "instructions",
  "state-x",
  "assertions",
  "no-padding",
  # "rust-sdk",
  # "cli",
  # "cli-x",
]

[workspace.lints.rust]
unused_imports = "allow"
unused_mut = "allow"
dead_code = "allow"
unused_macros = "allow"
unused_variables = "allow"


[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']
