[workspace]
resolver = "2"
members = [
  "program",
  "interface",
  "instructions",
  "state-x",
  "assertions",
  "no-padding",
  "rust-sdk",
  #"cli",
  #"cli-x",
]

[workspace.lints.rust]
unused_imports = "allow"
unused_mut = "allow"
dead_code = "allow"
unused_macros = "allow"
unused_variables = "allow"


[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']


[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
