[workspace]
resolver = "2"
members = [
  "program",
  "interface",
  "instructions",
  "state",
  "assertions",
  "no-padding",
  "rust-sdk",
  "cli",
  "test-program-authority",
]

[workspace.package]
version = "1.3.2"
authors = ["SWIG Team"]
documentation = "https://build.onswig.com"

[workspace.lints.rust]
unused_imports = "allow"
unused_mut = "allow"
dead_code = "allow"
unused_macros = "allow"
unused_variables = "allow"


[workspace.lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = ['cfg(target_os, values("solana"))']
