[package]
name = "swig-cli"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0"
description = "Solana program for the Swig protocol"
publish = false

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
solana-sdk = "2.0"
solana-client = "2.0"
solana-transaction-status = "2.0"
libsecp256k1 = "0.7.1"
rand = "0.8.5"
swig-interface = { path = "../interface" }
swig-state-x = { path = "../state-x" }
solana-cli-config = "2"
anyhow = "1.0.75"
bs58 = "0.5.1"
hex = "0.4.3"
borsh = "1.5.3"
tokio = { version = "1.26.0", features = ["full"] }
macro_rules_attribute = "0.2.0"
solana-account-decoder-client-types = "2.0"
spl-associated-token-account = { version = "6.0.0", features = [
  "no-entrypoint",
] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
directories = "6.0.0"
secp256k1 = "0.30.0"
solana-pubkey = "2.0"
jupiter-swap-api-client = { git = "https://github.com/austbot/jupiter-swap-api-client.git" }

[lints]
workspace = true
