[package]
name = "swig-cli"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
description = "SWIG CLI - A command-line interface for the SWIG wallet"
authors = ["SWIG Team"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

directories = "5.0"
dirs = "5.0"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }
bs58 = "0.5.1"
hex = "0.4.3"
swig-sdk = { path = "../rust-sdk" }
openssl = { version = "0.10", features = ["vendored"] }
solana-sdk = "2.0"
solana-secp256r1-program = "2.0"

alloy-primitives = { version = "1.0.0", features = ["k256"] }
alloy-signer = { version = "0.14.0" }
alloy-signer-local = { version = "0.14.0" }
spl-token = "8.0.0"
spl-associated-token-account = "7.0.0"

[lints]
workspace = true
