[package]
name = "swig-compact-instructions"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0"
description = "Swig protocol instructions handling"

[features]
client = ["solana-program"]

[dependencies]
pinocchio = { version = "0.8.1" }
pinocchio-system = { version = "0.2.3" }
solana-program = { version = "2.0.13", optional = true }
bs58 = "*"