[package]
name = "swig-compact-instructions"
version.workspace = true
edition = "2021"
license = "AGPL-3.0"
description = "Swig protocol instructions handling"
authors.workspace = true
documentation.workspace = true

[features]
client = ["solana-program"]

[dependencies]
pinocchio = { version = "0.9" }
pinocchio-system = { version = "0.3" }
solana-program = { version = "2.0.13", optional = true }
bs58 = "*"

[lints]
workspace = true
