[package]
name = "swig-interface"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0"
description = "Solana program for the Swig protocol"
publish = false

[dependencies]
bytemuck = {version="1.19.0", features=["derive"]}
solana-sdk = {version = "2.0"}
swig = {path = "../program", default-features = false, features = ["no-entrypoint"]}
swig-compact-instructions = {path = "../instructions", default-features = false, features = ["client"]}
swig-state = {path = "../state"}
swig-state-x = {path = "../state-x"}
anyhow = "1.0.75"

secp256k1 = {version = "0.30.0", features = ["rand"]}