[package]
name = "swig"
version = "0.0.1"
edition = "2021"
license = "AGPL-3.0"
description = "Solana program for the Swig protocol"
publish = false

[lints]
workspace = true

[dependencies]
pinocchio-pubkey = { version = "0.2.4" }
pinocchio = { version = "0.8.1", features = ["std"] }
pinocchio-system = { version = "0.2.3" }
shank = { version = "0.4.2", git = "https://github.com/anagrambuild/shank.git" }
swig-compact-instructions = { path = "../instructions" }
swig-state-x = { path = "../state-x" }
swig-assertions = { path = "../assertions" }
static_assertions = "1.1.0"
bs58 = "*"
num_enum = "0.7.3"
bytemuck = { version = "1.13.1", features = ["derive"] }
no-padding = { path = "../no-padding" }

[dev-dependencies]
solana-sdk = "2"
rand = "0.9.0"
swig-interface = { path = "../interface" }
litesvm-token = { version = "0.6.1" }
litesvm = { version = "0.6.1" }
test-log = "0.2.16"
anyhow = "1.0.71"
ecdsa = "0.16.9"
alloy-primitives = { version = "1.0.0", features = ["k256"] }
alloy-signer = { version = "0.14.0" }
alloy-signer-local = { version = "0.14.0" }
[features]
test-bpf = []
no-entrypoint = []
program_scope_test = []

[lib]
crate-type = ["cdylib", "lib"]
