[package]
name = "swig"
version.workspace = true
edition = "2021"
license = "AGPL-3.0"
description = "Solana program for the Swig protocol"
publish = false
authors.workspace = true
documentation.workspace = true

[lints]
workspace = true

[dependencies]
pinocchio-pubkey = { version = "0.2.4" }
pinocchio = { version = "0.8.1", features = ["std"] }
pinocchio-system = { version = "0.2.3" }
pinocchio-token = { version = "0.2" }
shank = { version = "0.4.2", git = "https://github.com/anagrambuild/shank.git" }
swig-compact-instructions = { path = "../instructions" }
swig-state = { path = "../state" }
swig-assertions = { path = "../assertions" }
static_assertions = "1.1.0"
bs58 = "*"
num_enum = "0.7.3"
bytemuck = { version = "1.13.1", features = ["derive"] }
no-padding = { path = "../no-padding" }
solana-security-txt = "=1.1.1"
default-env = "=0.1.1"
oracle-mapping-state = { git = "https://github.com/anagrambuild/scope-oracle-mapper", branch = "santhosh/state-crate" }


[dev-dependencies]
solana-sdk = "2"
rand = "0.9.0"
swig-interface = { path = "../interface" }
litesvm-token = { version = "0.6.1" }
litesvm = { version = "0.6.1" }
test-log = "0.2.16"
anyhow = "1.0.71"
ecdsa = "0.16.9"
alloy-primitives = { version = "1.0.0", features = ["k256"] }
alloy-signer = { version = "0.14.0" }
alloy-signer-local = { version = "0.14.0" }
solana-stake-interface = "=1.2.1"
solana-clock = "=2.2.1"
bincode = "=1.3.3"
solana-client = "=2.2.4"
solana-program = "=2.2.1"
once_cell = "1.21.3"
spl-memo = "=6.0.0"
base64 = "0.22.1"
solana-secp256r1-program = "2.2.1"
openssl = { version = "0.10.72", features = ["vendored"] }
hex = "0.4.3"

[features]
test-bpf = []
no-entrypoint = []
program_scope_test = []
stake_tests = []

[lib]
crate-type = ["cdylib", "lib"]
