[package]
name = "swig"
version.workspace = true
edition = "2021"
license = "AGPL-3.0"
description = "Solana program for the Swig protocol"
publish = false
authors.workspace = true
documentation.workspace = true

[lints]
workspace = true

[dependencies]
pinocchio-pubkey = { version = "0.3" }
pinocchio = { version = "0.9", features = ["std"] }
pinocchio-system = { version = "0.3" }
pinocchio-token = { version = "0.3" }
shank = { version = "0.4.2", git = "https://github.com/anagrambuild/shank.git" }
swig-compact-instructions = { path = "../instructions" }
swig-state = { path = "../state" }
swig-assertions = { path = "../assertions" }
static_assertions = "1.1.0"
bs58 = "*"
num_enum = "0.7.3"
bytemuck = { version = "1.13.1", features = ["derive"] }
no-padding = { path = "../no-padding" }
solana-security-txt = "=1.1.1"
default-env = "=0.1.1"

[target.'cfg(not(target_arch = "bpf"))'.dev-dependencies]
solana-sdk = "3.0.0"
rand = "0.9.0"
swig-interface = { path = "../interface" }
litesvm-token = { version = "0.10.0" }
litesvm = { version = "0.10.0", features = ["precompiles"] }
test-log = "0.2.16"
anyhow = "1.0.71"
ecdsa = "0.16.9"
alloy-primitives = { version = "=1.5.7", features = ["k256"] }
alloy-signer = { version = "=1.6.3" }
alloy-signer-local = { version = "=1.6.3" }
solana-stake-interface = "3.1.0"
solana-clock = "3.0.1"
bincode = "=1.3.3"
solana-client = "3.1.11"
solana-program = "3.0.0"
solana-system-interface = { version = "3.1.0", features = ["bincode"] }
solana-compute-budget-interface = "3.0.0"
once_cell = "1.21.3"
spl-memo = "=6.0.0"
solana-secp256r1-program = "3.0.0"
openssl = { version = "0.10.72", features = ["vendored"] }
hex = "0.4.3"

[features]
test-bpf = []
no-entrypoint = []
program_scope_test = []
stake_tests = []

[lib]
crate-type = ["cdylib", "lib"]

[build-dependencies]
shank_idl = { version = "0.4.2", git = "https://github.com/anagrambuild/shank.git" }
anyhow = "1.0"
