[package]
name = "swig-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
swig-interface = { path = "../interface" }
swig-state-x = { path = "../state-x" }

solana-program = "2.0"
solana-sdk = "2.0"
solana-client = "2.0"
bs58 = "0.5.1"
hex = "0.4.3"
thiserror = "2.0.12"
anyhow = "1.0.75"

[dev-dependencies]
test-log = "0.2"
rand = "0.8"
litesvm = { version = "0.6.1" }
alloy-primitives = { version = "1.0.0", features = ["k256"] }
alloy-signer = { version = "0.14.0" }
alloy-signer-local = { version = "0.14.0" }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = [
    "no-entrypoint",
] }
litesvm-token = { version = "0.6.1" }


[lints]
workspace = true
