[package]
name = "swig-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
swig-interface = { path = "../interface" }
swig-state-x = { path = "../state-x" }

solana-program = "2.0"
solana-sdk = "2.0"
solana-client = "2.0"
bs58 = "0.5.1"
hex = "0.4.3"
thiserror = "2.0.12"
anyhow = "1.0.75"
alloy-primitives = { version = "1.0.0", features = ["k256"] }
alloy-signer = { version = "0.14.0" }
alloy-signer-local = { version = "0.14.0" }
secp256k1 = "0.21"
litesvm-token = "0.6.1"
spl-associated-token-account = "7.0.0"
spl-token = "8.0.0"
solana-account-decoder-client-types = "2.0"

[dev-dependencies]
test-log = "0.2"
rand = "0.8"
litesvm = { version = "0.6.1" }


[features]
rust_sdk_test = []

[lints]
workspace = true
