[package]
name = "swig-sdk"
version.workspace = true
edition = "2021"
license = "AGPL-3.0"
authors.workspace = true
documentation.workspace = true

[dependencies]
swig-interface = { path = "../interface" }
swig-state = { path = "../state" }

solana-program = "3.0.0"
solana-sdk = "3.0.0"
solana-client = "3.1.11"
solana-system-interface = { version = "3.1.0", features = ["bincode"] }
solana-address-lookup-table-interface = "3.0.1"
solana-commitment-config = "3.1.1"
bs58 = "0.5.1"
hex = "0.4.3"
thiserror = "2.0.18"
anyhow = "1.0.102"
alloy-primitives = { version = "=1.5.7", features = ["k256"] }
alloy-signer = { version = "=1.6.3" }
alloy-signer-local = { version = "=1.6.3" }
secp256k1 = "0.31.1"
litesvm-token = "0.10.0"
five8_core = { version = "0.1.2", features = ["std"] }
spl-associated-token-account = "8.0.0"
spl-token = "9.0.0"
solana-account-decoder-client-types = "3.1.11"

[dev-dependencies]
test-log = "0.2.19"
rand = "0.9.2"
litesvm = { version = "0.10.0", features = ["precompiles"] }
openssl = "0.10.76"
solana-secp256r1-program = "3.0.0"

[features]
rust_sdk_test = []

[lints]
workspace = true
