[package]
name = "swig-state-x"
version = "0.1.0"
edition = "2021"


[dependencies]
pinocchio = { version = "=0.8.1", features = ["std"] }
swig-assertions = { path = "../assertions" }
no-padding = { path = "../no-padding" }
murmur3 = { version = "0.5.2", optional = true }


[target.'cfg(not(feature = "static_syscalls"))'.dependencies]
murmur3 = "0.5.2"


[dev-dependencies]
rand = "0.9.0"
hex = "0.4.3"

[lints.clippy]
unexpected_cfgs = "allow"
unused_mut = "allow"
unused_variables = "allow"
